objects/Billing_Worksheet_Line__c/Billing_Worksheet_Line__c.object-meta.xml
<CustomObject>
    <label>Billing Worksheet Line</label>
    <nameField>
        <displayFormat>WL-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Worksheet Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>