objects/Billing_Worksheet_Line__c/fields/Approval_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Id__c</fullName>
    <label>Approval Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>