objects/Billing_Worksheet_Line__c/fields/Bill_as_Lump_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bill_as_Lump_Sum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundled</label>
    <type>Checkbox</type>
</CustomField>