objects/Billing_Worksheet_Line__c/fields/Billing_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Billing_End_Time__c</fullName>
    <label>Billing End Time</label>
    <type>Time</type>
</CustomField>