objects/Billing_Worksheet_Line__c/fields/Billing_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Time__c</fullName>
    <label>Billing Start Time</label>
    <type>Time</type>
</CustomField>