objects/Billing_Worksheet_Line__c/fields/Bundle_Line__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Line</label>
    <referenceTo>Billing_Worksheet_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Bundle Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>