objects/Billing_Worksheet_Line__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>