objects/Billing_Worksheet_Line__c/fields/Contract_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Premium_Rate__c</fullName>
    <label>Contract Double Time Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>