objects/Billing_Worksheet_Line__c/fields/Cost_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Cost_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Cost Unit of Measure)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>