objects/Billing_Worksheet_Line__c/fields/Costing_Source__c.field-meta.xml
<CustomField>
    <fullName>Costing_Source__c</fullName>
    <label>Costing Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>