objects/Billing_Worksheet_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Billing Desciption</label>
    <length>250</length>
    <type>Text</type>
</CustomField>