objects/Billing_Worksheet_Line__c/fields/Drop_Off_Rental__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop Off Rental</label>
    <type>Checkbox</type>
</CustomField>