objects/Billing_Worksheet_Line__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>