objects/Billing_Worksheet_Line__c/fields/Flat_Pay_Line__c.field-meta.xml
<CustomField>
    <fullName>Flat_Pay_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flat Pay Line</label>
    <type>Checkbox</type>
</CustomField>