objects/Billing_Worksheet_Line__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <label>Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>