objects/Billing_Worksheet_Line__c/fields/Inserted_by_User__c.field-meta.xml
<CustomField>
    <fullName>Inserted_by_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inserted by User</label>
    <type>Checkbox</type>
</CustomField>