objects/Billing_Worksheet_Line__c/fields/Is_Temporary_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Is_Temporary_Service_Center__c</fullName>
    <formula>Service_Center__r.Temporary__c == true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Temporary Service Center</label>
    <type>Checkbox</type>
</CustomField>