objects/Billing_Worksheet_Line__c/fields/isEqual__c.field-meta.xml
<CustomField>
    <fullName>isEqual__c</fullName>
    <formula>Cost_Qty__c == Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEqual</label>
    <type>Checkbox</type>
</CustomField>