objects/Billing_Worksheet_Line__c/fields/Job_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_End_Time__c</fullName>
    <label>Job End Time</label>
    <type>Time</type>
</CustomField>