objects/Billing_Worksheet_Line__c/fields/Linked_Line__c.field-meta.xml
<CustomField>
    <fullName>Linked_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Line</label>
    <referenceTo>Billing_Worksheet_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Linked Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>