objects/Billing_Worksheet_Line__c/fields/Min_Sell_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Sell_Qty__c</fullName>
    <label>Min Sell Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>