objects/Billing_Worksheet_Line__c/fields/Non_Travel_Hour_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Non_Travel_Hour_Unit_Cost__c</fullName>
    <label>Non-Travel Hour Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>