objects/Billing_Worksheet_Line__c/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>