objects/Billing_Worksheet_Line__c/fields/Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours__c</fullName>
    <label>Overtime Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>