objects/Billing_Worksheet_Line__c/fields/Overtime_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Rate__c</fullName>
    <label>Overtime Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>