objects/Billing_Worksheet_Line__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line</label>
    <referenceTo>Billing_Worksheet_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Parent Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>