objects/Billing_Worksheet_Line__c/fields/Price_O_W_Reason__c.field-meta.xml
<CustomField>
    <fullName>Price_O_W_Reason__c</fullName>
    <label>Price O/W Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reason1</fullName>
            </value>
            <value>
                <fullName>Reason2</fullName>
            </value>
            <value>
                <fullName>Reason3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>