objects/Billing_Worksheet_Line__c/fields/Profit_Pct__c.field-meta.xml
<CustomField>
    <fullName>Profit_Pct__c</fullName>
    <formula>If(Line_Amount__c &lt;&gt; 0, Profit__c / Line_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>