objects/Billing_Worksheet_Line__c/fields/PW_Double_Time_Hour_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PW_Double_Time_Hour_Submitted__c</fullName>
    <label>PW Double Time Hour Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>