objects/Billing_Worksheet_Line__c/fields/PW_Double_Time_Hour_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>PW_Double_Time_Hour_Unit_Cost__c</fullName>
    <label>PW Double Time Hour Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>