objects/Billing_Worksheet_Line__c/fields/PW_Overtime_Hour_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>PW_Overtime_Hour_Unit_Cost__c</fullName>
    <label>PW Overtime Hour Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>