objects/Billing_Worksheet_Line__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Quote Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>