objects/Billing_Worksheet_Line__c/fields/Rent_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Rent_Billing_Type__c</fullName>
    <label>Rent Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>