objects/Billing_Worksheet_Line__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>