objects/Billing_Worksheet_Line__c/fields/Resource_Type_LEM__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type_LEM__c</fullName>
    <formula>Resource_Type__r.LEM_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type LEM</label>
    <type>Checkbox</type>
</CustomField>