objects/Billing_Worksheet_Line__c/fields/Resource_UOM__c.field-meta.xml
<CustomField>
    <fullName>Resource_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource UOM</label>
    <referenceTo>ResourceUOMAssociation__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>