objects/Billing_Worksheet_Line__c/fields/Sales_Bundle_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Bundle_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Bundle Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Sales Bundle Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>