objects/Billing_Worksheet_Line__c/fields/Sales_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Sales Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>