objects/Billing_Worksheet_Line__c/fields/Sales_Order_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Job_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order Job Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order_Job_Task__c.Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order_Job_Task__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>