objects/Billing_Worksheet_Line__c/fields/Same__c.field-meta.xml
<CustomField>
    <fullName>Same__c</fullName>
    <formula>Invoiced__c = TM_Line__r.Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same</label>
    <type>Checkbox</type>
</CustomField>