objects/Billing_Worksheet_Line__c/fields/Site_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Start_Time__c</fullName>
    <label>Site Start Time</label>
    <type>Time</type>
</CustomField>