objects/Billing_Worksheet_Line__c/fields/System_Calculated_Line__c.field-meta.xml
<CustomField>
    <fullName>System_Calculated_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Calculated Line</label>
    <type>Checkbox</type>
</CustomField>