objects/Billing_Worksheet_Line__c/fields/Tax_Pct__c.field-meta.xml
<CustomField>
    <fullName>Tax_Pct__c</fullName>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>