objects/Billing_Worksheet_Line__c/fields/Temp_Date_Update_Check__c.field-meta.xml
<CustomField>
    <fullName>Temp_Date_Update_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Date Update Check</label>
    <type>Checkbox</type>
</CustomField>