objects/Billing_Worksheet_Line__c/fields/TempIsEqual__c.field-meta.xml
<CustomField>
    <fullName>TempIsEqual__c</fullName>
    <formula>Quote_Line__c == Sales_Line__r.Quote_Line__c</formula>
    <label>TempIsEqual</label>
    <type>Checkbox</type>
</CustomField>