objects/Billing_Worksheet_Line__c/fields/TempQuoteLineResTypeResId__c.field-meta.xml
<CustomField>
    <fullName>TempQuoteLineResTypeResId__c</fullName>
    <description>Temp Data Validation</description>
    <formula>IF(OR(TEXT(Category__c) == 'Labor', TEXT(Category__c) == 'Equipment', TEXT(Category__c) == 'Lump Sum'),
 CASESAFEID(Quote_Line__r.Resource_Type__c),  CASESAFEID(Quote_Line__r.Resource__c))</formula>
    <label>TempQuoteLineResTypeResId</label>
    <type>Text</type>
</CustomField>