objects/Billing_Worksheet_Line__c/fields/TempResTypeResId__c.field-meta.xml
<CustomField>
    <fullName>TempResTypeResId__c</fullName>
    <formula>IF(OR(TEXT(Category__c) == 'Labor', TEXT(Category__c) == 'Equipment', TEXT(Category__c) == 'Lump Sum'),
CASESAFEID(Resource_Type__c), CASESAFEID(Resource__c))</formula>
    <label>TempResTypeResId</label>
    <type>Text</type>
</CustomField>