objects/Billing_Worksheet_Line__c/fields/TempSalesLineResTypeResId__c.field-meta.xml
<CustomField>
    <fullName>TempSalesLineResTypeResId__c</fullName>
    <formula>IF(OR(TEXT(Category__c) == 'Labor', TEXT(Category__c) == 'Equipment', TEXT(Category__c) == 'Lump Sum'),
CASESAFEID(Sales_Line__r.Resource_Type__c), CASESAFEID(Sales_Line__r.Resource__c))</formula>
    <label>TempSalesLineResTypeResId</label>
    <type>Text</type>
</CustomField>