objects/Billing_Worksheet_Line__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>