objects/Billing_Worksheet_Line__c/fields/TM_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>TM_Job_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Job Task</label>
    <referenceTo>TM_Job_Task__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>